# fat-clip

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QWEN.md  README.md  README.zh-CN.md  package-lock.json  package.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: clipboard-types.md  release-setup.md
docs/agent/: session-memory.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/installer-templates/: installer.nsi  main.wxs
src-tauri/src/: clipboard.rs  clipboard_monitor.rs  db.rs  input_panel.rs  lib.rs  main.rs  settings.rs  tray.rs
src-tauri/src/clipboard_monitor/: macos.rs
src/components/: ClipboardListener.tsx  ShortcutInput.tsx  TitleBar.tsx
src/hooks/: useNotification.ts  usePlatform.ts  useShortcuts.ts  useWindowToggle.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  zh.json
src/pages/: Home.tsx  InputPanelWindow.tsx  Settings.tsx  Shortcuts.tsx  Tags.tsx
